# doki

./: .gitignore  Cargo.toml  DOKI.md  LICENSE  README.md
scripts/: install.sh
src/: data.rs  lib.rs  render.rs
src/data/: audio.rs  network.rs
