[package]
name = "scope-studio"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
cpal = { version = "0.15", optional = true }
rustfft = { version = "6", optional = true }

[features]
default = []
audio = ["dep:cpal", "dep:rustfft"]

[[bin]]
name = "doki"
path = "src/bin/audio.rs"

[[bin]]
name = "audio-scope"
path = "src/bin/audio-scope.rs"
